codex/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/mcp

  MCP Tools

  • plugin_docs
    • Auth: Unsupported
    • Tools: lookup
    • Resources: Docs (file:///docs)
    • Resource templates: Doc Template (file:///docs/{id})
